terraform/alb.tf
# Security group for ALB
resource "aws_security_group" "alb" {
    name = "${var.project_name}-alb-sg"
    description = "Security group for ALB"
    vpc_id = aws_vpc.main.id

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.project_name}-alb-sg"
    }

}

# Application load balancer
resource "aws_lb" "main" {
    name = "${var.project_name}-alb"
    internal = false
    load_balancer_type = "application"
    security_groups = [aws_security_group.alb.id]
    subnets = aws_subnet.public[*].id

    tags = {
        Name = "${var.project_name}-alb"
        Environment = var.environment
    }
}

# Target Group
resource "aws_lb_target_group" "order_service" {
    name = "order-service-tg"
    port = 5000
    protocol = "HTTP"
    vpc_id = aws_vpc.main.id
    target_type = "ip"

    health_check {
        enabled             = true
        path               = "/"
        healthy_threshold  = 2
        unhealthy_threshold = 5
        timeout            = 5
        interval           = 30
    }

    tags = {
        Name        = "order-service-tg"
        Environment = var.environment
    }
}

# ALB Listener
resource "aws_lb_listener" "http" {
    load_balancer_arn = aws_lb.main.arn
    port = 80
    protocol = "HTTP"

    default_action {
      type = "forward"
      target_group_arn = aws_lb_target_group.order_service.arn 
    }
}
